--- a/news.html
+++ b/news.html
@@ -15,6 +15,7 @@
       <li><a href="index.html">Home</a></li>
       <li><a href="webmap.html">Webmap</a></li>
       <li class="active"><a href="news.html">News</a></li>
+      <li><a href="slopemap.html">Slopemap</a></li>
     </ul>
   </div>
   <div class="content">
