added grid system to slopemap.html

--- a/slopemap.html
+++ b/slopemap.html
@@ -19,12 +19,17 @@
   </ul>
 </div>
 <div class="content">
-  <h1>Interactive Web Map</h1>
-  <iframe src="https://derekds.github.io/CSS2-Canyoning-Webmap/#10/-33.3000/150.2111"
-          width="80%"
-          height="750"
-          style="border: 2px solid #ccc; display: block; margin: 0 auto;">
-  </iframe>
+  <h1>Interactive Slope Map</h1>
+  <div class="grid">
+    <div>A1</div>
+    <div>A2</div>
+    <div>A3</div>
+    <div>A4</div>
+    <div>B1</div>
+    <div>B2</div>
+    <div>B3</div>
+    <div>B4</div>
+  </div>
   <p class="paragraph1">
     Explore the interactive map above. Use the zoom and pan tools to not navigate the LiDAR data and geographic boundaries. For further details, contact us or explore related news on our website.
   </p>
