--- a/slopemap.html
+++ b/slopemap.html
@@ -20,16 +20,27 @@
 </div>
 <div class="content">
   <h1>Interactive Slope Map</h1>
-  <div class="grid">
-    <div>A1</div>
-    <div>A2</div>
-    <div>A3</div>
-    <div>A4</div>
-    <div>B1</div>
-    <div>B2</div>
-    <div>B3</div>
-    <div>B4</div>
+  <div class="gridholder">
+    <div class="grid">
+      <div>A1</div>
+      <div>A2</div>
+      <div>A3</div>
+      <div>A4</div>
+      <div>B1</div>
+      <div>B2</div>
+      <div>B3</div>
+      <div>B4</div>
+      <div>C1</div>
+      <div>C2</div>
+      <div>C3</div>
+      <div>C4</div>
+      <div>D1</div>
+      <div>D2</div>
+      <div>D3</div>
+      <div>D4</div>
+    </div>
   </div>
+
   <p class="paragraph1">
     Explore the interactive map above. Use the zoom and pan tools to not navigate the LiDAR data and geographic boundaries. For further details, contact us or explore related news on our website.
   </p>
