grid converted to buttons, description updated

--- a/slopemap.html
+++ b/slopemap.html
@@ -22,27 +22,27 @@
   <h1>Interactive Slope Map</h1>
   <div class="gridholder">
     <div class="grid">
-      <div>A1</div>
-      <div>A2</div>
-      <div>A3</div>
-      <div>A4</div>
-      <div>B1</div>
-      <div>B2</div>
-      <div>B3</div>
-      <div>B4</div>
-      <div>C1</div>
-      <div>C2</div>
-      <div>C3</div>
-      <div>C4</div>
-      <div>D1</div>
-      <div>D2</div>
-      <div>D3</div>
-      <div>D4</div>
+      <button>A1</button>
+      <button>A2</button>
+      <button>A3</button>
+      <button>A4</button>
+      <button>B1</button>
+      <button>B2</button>
+      <button>B3</button>
+      <button>B4</button>
+      <button>C1</button>
+      <button>C2</button>
+      <button>C3</button>
+      <button>C4</button>
+      <button>D1</button>
+      <button>D2</button>
+      <button>D3</button>
+      <button>D4</button>
     </div>
   </div>
 
   <p class="paragraph1">
-    Explore the interactive map above. Use the zoom and pan tools to not navigate the LiDAR data and geographic boundaries. For further details, contact us or explore related news on our website.
+    Explore the interactive map by using the buttons above to navigate to the area that you would like to view slopemap data for. For further details, contact us or explore related news on our website.
   </p>
 </div>
 <div class="footer">
