template for grid subpages created

--- a/slopemapA1.html
+++ b/slopemapA1.html
@@ -22,22 +22,10 @@
   <h1>Interactive Slope Map</h1>
   <div class="mapgridholder">
     <div class="mapgrid">
-      <button>A1</button>
-      <button>A2</button>
-      <button>A3</button>
-      <button>A4</button>
-      <button>B1</button>
-      <button>B2</button>
-      <button>B3</button>
-      <button>B4</button>
-      <button>C1</button>
-      <button>C2</button>
-      <button>C3</button>
-      <button>C4</button>
-      <button>D1</button>
-      <button>D2</button>
-      <button>D3</button>
-      <button>D4</button>
+      <h2>Map</h2>
+      <h2>Slopemap</h2>
+      <img src="teehee.png" alt="Regular Map Image">
+      <img src="slopemap.png" alt="Slopemap Image">
     </div>
   </div>
 
