--- a/slopemap.html
+++ b/slopemap.html
@@ -22,8 +22,8 @@
   <h1>Interactive Slope Map</h1>
   <div class="gridholder">
     <div class="grid">
-      <button>A1</button>
-      <button>A2</button>
+      <button href="slopemapA1.html">A1</button>
+      <a href="A2.html"><button><img src="placeholder.png" alt="A2" style="width: 100%; height: 100%;"A2></button></a>
       <button>A3</button>
       <button>A4</button>
       <button>B1</button>
