--- a/slopemap.html
+++ b/slopemap.html
@@ -22,10 +22,10 @@
   <h1>Interactive Slope Map</h1>
   <div class="gridholder">
     <div class="grid">
-      <button href="slopemapA1.html">A1</button>
-      <a href="A2.html"><button><img src="placeholder.png" alt="A2" style="width: 100%; height: 100%;"A2></button></a>
-      <button>A3</button>
-      <button>A4</button>
+      <a href="A1.html"><button><img src="tmap/row-1-column-1.png" alt="A1" style="width: 100%; height: 100%;"A2></button></a>
+      <a href="A2.html"><button><img src="tmap/row-1-column-2.png" alt="A2" style="width: 100%; height: 100%;"A2></button></a>
+      <a href="A3.html"><button><img src="tmap/row-1-column-3.png" alt="A3" style="width: 100%; height: 100%;"A2></button></a>
+      <a href="A4.html"><button><img src="tmap/row-1-column-4.png" alt="A4" style="width: 100%; height: 100%;"A2></button></a>
       <button>B1</button>
       <button>B2</button>
       <button>B3</button>
