--- a/slopemap.html
+++ b/slopemap.html
@@ -22,22 +22,22 @@
   <h1>Interactive Slope Map</h1>
   <div class="gridholder">
     <div class="grid">
-      <a href="A1.html"><button><img src="tmap/row-1-column-1.png" alt="A1" style="width: 100%; height: 100%;"A2></button></a>
-      <a href="A2.html"><button><img src="tmap/row-1-column-2.png" alt="A2" style="width: 100%; height: 100%;"A2></button></a>
-      <a href="A3.html"><button><img src="tmap/row-1-column-3.png" alt="A3" style="width: 100%; height: 100%;"A2></button></a>
-      <a href="A4.html"><button><img src="tmap/row-1-column-4.png" alt="A4" style="width: 100%; height: 100%;"A2></button></a>
-      <button>B1</button>
-      <button>B2</button>
-      <button>B3</button>
-      <button>B4</button>
-      <button>C1</button>
-      <button>C2</button>
-      <button>C3</button>
-      <button>C4</button>
-      <button>D1</button>
-      <button>D2</button>
-      <button>D3</button>
-      <button>D4</button>
+      <a href="A1.html"><button><img src="tmap/row-1-column-1.png" alt="A1" style="width: 10vmax; height: 10vmax;"></button></a>
+      <a href="A2.html"><button><img src="tmap/row-1-column-2.png" alt="A2" style="width: 10vmax; height: 10vmax;"></button></a>
+      <a href="A3.html"><button><img src="tmap/row-1-column-3.png" alt="A3" style="width: 10vmax; height: 10vmax;"></button></a>
+      <a href="A4.html"><button><img src="tmap/row-1-column-4.png" alt="A4" style="width: 10vmax; height: 10vmax;"></button></a>
+      <a href="B1.html"><button><img src="tmap/row-2-column-1.png" alt="B1" style="width: 10vmax; height: 10vmax;"></button></a>
+      <a href="B2.html"><button><img src="tmap/row-2-column-2.png" alt="B2" style="width: 10vmax; height: 10vmax;"></button></a>
+      <a href="B3.html"><button><img src="tmap/row-2-column-3.png" alt="B3" style="width: 10vmax; height: 10vmax;"></button></a>
+      <a href="B4.html"><button><img src="tmap/row-2-column-4.png" alt="B4" style="width: 10vmax; height: 10vmax;"></button></a>
+      <a href="C1.html"><button><img src="tmap/row-3-column-1.png" alt="C1" style="width: 10vmax; height: 10vmax;"></button></a>
+      <a href="C2.html"><button><img src="tmap/row-3-column-2.png" alt="C2" style="width: 10vmax; height: 10vmax;"></button></a>
+      <a href="C3.html"><button><img src="tmap/row-3-column-3.png" alt="C3" style="width: 10vmax; height: 10vmax;"></button></a>
+      <a href="C4.html"><button><img src="tmap/row-3-column-4.png" alt="C4" style="width: 10vmax; height: 10vmax;"></button></a>
+      <a href="D1.html"><button><img src="tmap/row-4-column-1.png" alt="D1" style="width: 10vmax; height: 10vmax;"></button></a>
+      <a href="D2.html"><button><img src="tmap/row-4-column-2.png" alt="D2" style="width: 10vmax; height: 10vmax;"></button></a>
+      <a href="D3.html"><button><img src="tmap/row-4-column-3.png" alt="D3" style="width: 10vmax; height: 10vmax;"></button></a>
+      <a href="D4.html"><button><img src="tmap/row-4-column-4.png" alt="D4" style="width: 10vmax; height: 10vmax;"></button></a>
     </div>
   </div>
 
