--- a/A1.html
+++ b/A1.html
@@ -2,40 +2,75 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Webmap - CSS2</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>Slopemap - CSS2</title>
   <link rel="stylesheet" href="websystems.css">
+  <style>
+    /* Ensure the two map images sit side-by-side, stay centered, and scale equally */
+    .mapgrid {
+      display: flex;
+      justify-content: space-between;
+      align-items: flex-start;
+      margin: 0 auto 40px;
+      max-width: 1200px;
+      gap: 20px;
+    }
+    .map-container {
+      flex: 1;
+      text-align: center;
+    }
+    .map-container img {
+      width: 100%;
+      height: auto;
+      border: 2px solid #ccc;
+      box-shadow: 0 0 10px rgba(0,0,0,0.1);
+    }
+  </style>
 </head>
 <body>
 <div id="header">
   <h1>CSS2</h1>
 </div>
+
 <div class="navbar">
   <ul>
     <li><a href="index.html">Home</a></li>
     <li><a href="webmap.html">Webmap</a></li>
     <li><a href="news.html">News</a></li>
-    <li class="active"><a href="slopemap.html">Slopemap</a></li>
+    <li class="active"><a href="A1.html">Slopemap</a></li>
   </ul>
 </div>
+
 <div class="content">
   <h1>Interactive Slope Map</h1>
-  <div class="mapgridholder">
-    <div class="mapgrid">
+
+  <div class="mapgrid">
+    <div class="map-container">
       <h2>Map</h2>
+      <img src="tmap/row-1-column-1.png" alt="Regular Map Image">
+    </div>
+    <div class="map-container">
       <h2>Slopemap</h2>
-      <img src="teehee.png" alt="Regular Map Image">
-      <img src="slopemap.png" alt="Slopemap Image">
+      <img src="lidarmap/lidar-row-1-column-1.png" alt="Slopemap Image">
     </div>
   </div>
 
   <p class="paragraph1">
-    Explore the interactive map by using the buttons above to navigate to the area that you would like to view slopemap data for. For further details, contact us or explore related news on our website.
+    Explore the interactive map by using the buttons above to navigate through the LiDAR data and slope information. Select different tiles above to load specific areas of interest in the grid layout. For further details, contact us or explore related news on our website.
   </p>
 </div>
+
 <div class="footer">
-  <p>By CSS2 Group 2 | University of Technology Sydney | Autumn Semester 2025 | Click <a href="webmap.html">here</a> to return to the top of the page</p>
+  <p>
+    By Derek S | University of Technology Sydney | Spring Semester 2023 |
+    Click <a href="A1.html">here</a> to return to the top of the page
+  </p>
 </div>
 </body>
 </html>
+
+
+
+
+
 
