--- a/A1.html
+++ b/A1.html
@@ -62,8 +62,7 @@
 
 <div class="footer">
   <p>
-    By Derek S | University of Technology Sydney | Spring Semester 2023 |
-    Click <a href="A1.html">here</a> to return to the top of the page
+    By CSS2 Group 2 | University of Technology Sydney | Autumn Semester 2025 | Click <a href="lidar.html">here</a> to return to the top of the page</p>
   </p>
 </div>
 </body>
