--- a/A1.html
+++ b/A1.html
@@ -62,7 +62,7 @@
 
 <div class="footer">
   <p>
-    By CSS2 Group 2a | University of Technology Sydney | Autumn Semester 2025 | Click <a href="lidar.html">here</a> to return to the top of the page</p>
+    By CSS2 Group 2 | University of Technology Sydney | Autumn Semester 2025 | Click <a href="lidar.html">here</a> to return to the top of the page</p>
   </p>
 </div>
 </body>
