--- a/B4.html
+++ b/B4.html
@@ -6,7 +6,6 @@
   <title>Slopemap - CSS2</title>
   <link rel="stylesheet" href="websystems.css">
   <style>
-    /* Ensure the two map images sit side-by-side, stay centered, and scale equally */
     .mapgrid {
       display: flex;
       justify-content: space-between;
@@ -47,16 +46,16 @@
   <div class="mapgrid">
     <div class="map-container">
       <h2>Map</h2>
-      <img src="tmap/row-1-column-1.png" alt="Regular Map Image">
+      <img src="tmap/row-2-column-4.png" alt="Regular Map Image">
     </div>
     <div class="map-container">
       <h2>Slopemap</h2>
-      <img src="lidarmap/lidar-row-1-column-1.png" alt="Slopemap Image">
+      <img src="lidarmap/lidar-row-2-column-4.png" alt="Slopemap Image">
     </div>
   </div>
 
   <p class="paragraph1">
-    Explore the interactive map by using the buttons above to navigate through the LiDAR data and slope information. Select different tiles above to load specific areas of interest in the grid layout. For further details, contact us or explore related news on our website.
+    On this page you can compare the standard satellite image with LiDAR-derived slope analysis to understand terrain variations in detail.
   </p>
 </div>
 
@@ -67,9 +66,3 @@
 </div>
 </body>
 </html>
-
-
-
-
-
-
