--- a/slopemap.html
+++ b/slopemap.html
@@ -46,7 +46,7 @@
   </p>
 </div>
 <div class="footer">
-  <p>By CSS2 Group 2 | University of Technology Sydney | Autumn Semester 2025 | Click <a href="webmap.html">here</a> to return to the top of the page</p>
+  <p>By CSS2 Group 2 | University of Technology Sydney | Autumn Semester 2025 | Click <a href="slopemap.html">here</a> to return to the top of the page</p>
 </div>
 </body>
 </html>
