--- a/index.html
+++ b/index.html
@@ -3,33 +3,42 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Home - CSS2</title>
+  <title>Home – CSS2</title>
   <link rel="stylesheet" href="websystems.css">
 </head>
 <body>
-  <div id="header">
-    <h1>NSW Canyoning LiDAR Map and Services</h1>
-  </div>
-  <div class="navbar">
-    <ul>
-      <li class="active"><a href="index.html">Home</a></li>
-      <li><a href="webmap.html">Webmap</a></li>
-      <li><a href="news.html">News</a></li>
-      <li><a href="slopemap.html">Slopemap</a></li>
-    </ul>
-  </div>
-  <div class="content">
-    <h1>Welcome to CSS2</h1>
-    <p class="paragraph1">
-      This is the home page.
-    </p>
-    <p class="paragraph2">
-      Our website has been redesigned.
-    </p>
-  </div>
-  <div class="footer">
-    <p>By CSS2 Group 2 | University of Technology Sydney | Autumn Semester 2025 | Click <a href="index.html">here</a> to return to the top of the page</p>
-  </div>
+<div id="header">
+  <h1>NSW Canyoning LiDAR Map and Services</h1>
+</div>
+
+<div class="navbar">
+  <ul>
+    <li class="active"><a href="index.html">Home</a></li>
+    <li><a href="webmap.html">Webmap</a></li>
+    <li><a href="news.html">News</a></li>
+    <li><a href="slopemap.html">Slopemap</a></li>
+  </ul>
+</div>
+
+<div class="content">
+  <h1>Welcome to CSS2</h1>
+
+  <p>This is the home page. This website is designed to help canyoneers in the NSW region by improving the navigational experience through the integration of LiDAR data.</p>
+
+  <img
+          src="blue-mountains-adventure.jpg"
+          alt="Canyoning in the Blue Mountains"
+          style="display: block; margin: 20px auto; width: 50%;"
+  >
+
+</div>
+
+<div class="footer">
+  <p>
+    By CSS2 Group 2 | University of Technology Sydney | Autumn Semester 2025 |
+    Click <a href="index.html">here</a> to return to the top of the page
+  </p>
+</div>
 </body>
 </html>
 
