--- a/news.html
+++ b/news.html
@@ -8,7 +8,7 @@
 </head>
 <body>
   <div id="header">
-    <h1>CSS2</h1>
+    <h1>NSW Canyoning LiDAR Map and Services</h1>
   </div>
   <div class="navbar">
     <ul>
@@ -26,7 +26,7 @@
     </p>
     <h2>Update 2: Upcoming events</h2>
     <p class="paragraph2">
-      Section not finished
+      Expedition to newly discovered canyon set for the 6th of June. To register your interest, sign up <a href="news.html">here</a>
     </p>
     <h2>Update 3: Weather Warning</h2>
     <p class="paragraph3">
