--- a/B3.html
+++ b/B3.html
@@ -28,7 +28,7 @@
 </head>
 <body>
 <div id="header">
-  <h1>CSS2</h1>
+  <h1>NSW Canyoning LiDAR Map and Services</h1>
 </div>
 
 <div class="navbar">
