--- a/webmap.html
+++ b/webmap.html
@@ -20,7 +20,7 @@
   </div>
   <div class="content">
     <h1>Interactive Web Map</h1>
-    <iframe src="https://blakey4.github.io/Canyoning-Map/#10/-33.3000/150.2111"
+    <iframe src="https://derekds.github.io/CSS2-Canyoning-Webmap/"
             width="80%" 
             height="750"
             style="border: 2px solid #ccc; display: block; margin: 0 auto;">
